k8s/ingress/service-for-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: webcicd
spec:
  type: ClusterIP
  selector:
    app: manyu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
