k8s/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  #- host:  #abhimanyuchoudhary.com
  - http:
      paths:
      - path: /
        backend:
          serviceName: webcicd
          servicePort: 80
